make site responsive

--- a/grillout/index.html
+++ b/grillout/index.html
@@ -1,41 +1,69 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Grillout I</title>
-</head>
-<body>
-    <h1>Grillout I</h1>
-    <p>The first ever <dfn>Grillout</dfn> is right around the corner. Grillout is the annual event where we “Get the grill out and see what happens.”™ This event is family-friendly.</p>
+    <head>
+	<meta charset="UTF-8">
+	<title>Grillout I</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="../css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+    </head>
+    <body>
+	<div class="container">
+	    <div class="jumbotron">
+		<h1>Grillout I</h1>
+		<p class="lead">The first ever <dfn>Grillout</dfn> is right around the corner. Grillout is the annual event where we “Get the grill out and see what happens.”™ This event is family-friendly.</p>
+	    </div>
 
-    <h2>Date &amp; Time</h2>
-    <ul>
-        <li>Saturday, July 12, 2014, 1:30pm–?</li>
-        <li>Rain Date: Sunday, July 13, 2014, 12:30pm–?</li>
-    </ul>
+	    <hr />
 
-    <h2>Menu</h2>
-    <ul>
-        <li>Burgers</li>
-        <li>Hot dogs</li>
-        <li>Beer</li>
-        <li>Whatever other people bring</li>
-    </ul>
+	    <div class="row">
+		<div class="span4">
+		    <h2>Date &amp; Time</h2>
+		    <ul>
+			<li>Saturday, July 12, 2014, 1:30pm–?</li>
+			<li>Rain Date: Sunday, July 13, 2014, 12:30pm–?</li>
+		    </ul>
+		</div>
+		<div class="span4">
+		    <h2>Menu</h2>
+		    <ul>
+			<li>Burgers</li>
+			<li>Hot dogs</li>
+			<li>Beer</li>
+			<li>Whatever other people bring</li>
+		    </ul>
+		</div>
 
-    <h2>Attractions</h2>
-    <ul>
-        <li>Charcoal grill</li>
-        <li>Probably a fire pit</li>
-        <li>Maybe a dog</li>
-    </ul>
+		<div class="span4">
+		    <h2>Attractions</h2>
+		    <ul>
+			<li>Charcoal grill</li>
+			<li>Probably a fire pit</li>
+			<li>Maybe a dog</li>
+		    </ul>
+		</div>
+	    </div>
 
-    <h2>Location &amp; Directions</h2>
-    <ul>
-        <li>417 Elm Ave, Glenside, PA 19038</li>
-        <li>From Philadelphia, take the Warminster regional rail to Ardsley, then walk 5 minutes to address</li>
-        <li>Latest train to Philly departs Ardsley at 9:56pm, so come early if traveling by train</li>
-        <li>Residential neighborhood with plenty of parking</li>
-    </ul>
+	    <hr />
 
-    <p><small>Want to style this page? I'm taking <a href="https://github.com/chriscressman/chriscressman.github.com">pull requests</a>.</small></p>
-</body>
+	    <div class="row">
+		<div class="span12">
+		    <h2>Location &amp; Directions</h2>
+		    <ul>
+			<li>417 Elm Ave, Glenside, PA 19038</li>
+			<li>From Philadelphia, take the Warminster regional rail to Ardsley, then walk 5 minutes to address</li>
+			<li>Latest train to Philly departs Ardsley at 9:56pm, so come early if traveling by train</li>
+			<li>Residential neighborhood with plenty of parking</li>
+		    </ul>
+		</div>
+	    </div>
+
+	    <div class="footer">
+		<p><small>Want to style this page? I'm taking <a href="https://github.com/chriscressman/chriscressman.github.com">pull requests</a>.</small></p>
+	    </div>
+	</div>
+	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
+
+    </body>
 </html>
